修改IDEA配置：启动参数与代码样式